--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,15 @@
       "runtimeExecutable": "npm",
       "runtimeArgs": ["run-script", "debug-interface"],
       "port": 9229
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug AVA test file",
+      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/ava",
+      "runtimeArgs": ["${file}"],
+      "outputCapture": "std",
+      "skipFiles": ["<node_internals>/**/*.js"]
     }
   ]
 }
