--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "express": "^4.17.1",
     "graphql-tag": "^2.10.1",
     "husky": "^0.14.3",
+    "jest": "^26.6.3",
     "lint-staged": "^7.2.0",
     "node-fetch": "^2.3.0",
     "nodemon": "^1.18.11",
@@ -71,11 +72,11 @@
     "@babel/runtime-corejs2": "^7.5.5",
     "apollo-server-errors": "^2.4.1",
     "debug": "^4.1.1",
-    "graphql-auth-directives": "^2.2.2",
-    "lodash": "^4.17.19",
-    "neo4j-driver": "^4.2.1",
     "graphql": "^15.4.0",
-    "graphql-tools": "^7.0.2"
+    "graphql-auth-directives": "^2.2.2",
+    "graphql-tools": "^7.0.2",
+    "lodash": "^4.17.19",
+    "neo4j-driver": "^4.2.1"
   },
   "ava": {
     "require": [
