--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,6 +1,7 @@
 name: Build And Test
 on: 
-  pull_request:
+  push:
+    branches: [master]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,4 +32,10 @@ jobs:
 
     - name: Test
       run: npm run test-new
+
+    - name: Publish if version has been updated 
+      uses: pascalgn/npm-publish-action@1.3.6
+      env: 
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NPM_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
 
