--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,8 +34,7 @@ jobs:
       run: npm run test-new
 
     - name: Publish if version has been updated 
-      uses: pascalgn/npm-publish-action@1.3.6
-      env: 
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+      uses: JS-DevTools/npm-publish@v1
+      with:
+        token: ${{ secrets.NPM_PUBLISH_TOKEN }}
 
