--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,6 +33,18 @@
       "runtimeArgs": ["${file}"],
       "outputCapture": "std",
       "skipFiles": ["<node_internals>/**/*.js"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug AVA test file specific",
+      "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/ava",
+      "runtimeArgs": [
+        "test/unit/cypherTest.test.js",
+        "--match 'filter relationship type field with a custom field name for both related node types'"
+      ],
+      "outputCapture": "std",
+      "skipFiles": ["<node_internals>/**/*.js"]
     }
   ]
 }
